refactor(frontend): Modernize UI and improve template structure

--- a/wera/templates/wera/base.html
+++ b/wera/templates/wera/base.html
@@ -10,7 +10,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
-      href="https://fonts.googleapis.com/css2?family=Cabin:ital,wght@0,400..700;1,400..700&family=DM+Sans:ital,opsz,wght@0,9..40,100..1000;1,9..40,100..1000&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Work+Sans:ital,wght@0,100..900;1,100..900&display=swap"
       rel="stylesheet"
     />
     <link
@@ -36,106 +36,94 @@
 
   <body>
     <!-- header-start -->
-    <header class="mb-3">
-      <div class="header-area">
-        <div id="sticky-header" class="main-header-area">
-          <div class="container-fluid">
-            <div class="header_bottom_border">
-              <div class="row align-items-center">
-                <div class="col-xl-3 col-lg-2">
-                  <div class="logo">
-                    <a href="{% url 'home' %}"> wera </a>
-                  </div>
-                </div>
-                <div class="col-xl-6 col-lg-7">
-                  <div class="main-menu d-none d-lg-block">
-                    <nav>
-                      <ul id="navigation">
-                        <li>
-                          <a
-                            href="{% url 'home' %}"
-                            class="text-black"
-                            style="text-decoration: none"
-                            >home</a
-                          >
-                        </li>
-                        <li>
-                          <a
-                            href="{% url 'weras' %}"
-                            class="text-black"
-                            style="text-decoration: none"
-                          >
-                            form mtaani</a
-                          >
-                        </li>
-                        <li>
-                          <a
-                            href="#"
-                            class="text-black"
-                            style="text-decoration: none"
-                            >wera</a
-                          >
-                        </li>
-                        <li>
-                          <a
-                            href="{% url 'contact_me' %}"
-                            class="text-black"
-                            style="text-decoration: none"
-                            >contacts</a
-                          >
-                        </li>
-                      </ul>
-                    </nav>
-                  </div>
-                </div>
-                <div class="col-xl-3 col-lg-3 d-none d-lg-block">
-                  <div class="Appointment">
-                    <div class="phone_num d-none d-xl-block">
-                      {% if user.is_authenticated %}
-                      <p class="text-primary">{{user.username}}</p>
-                      {% else %}
-                      <a
-                        href="{% provider_login_url 'google' %} "
-                        class="btn btn-primary btn-outline-white"
-                        >login with google</a
-                      >
-                      {% endif %}
-                    </div>
-                    <div class="d-none d-lg-block mx-2">
-                      <a class="btn btn-primary" href="{% url 'wera_create' %}"
-                        >post wera</a
-                      >
-                    </div>
-                    {% if user.is_authenticated %}
-                    <div class="my-6 hover:text-blue-600">
-                      <a
-                        href="{% url 'account_logout' %}"
-                        class="btn btn-danger btn-outline-white"
-                        >sign out</a
-                      >
-                    </div>
-                    {% endif %}
-                  </div>
-                </div>
-                <div class="col-12">
-                  <div class="mobile_menu d-block d-lg-none"></div>
-                </div>
-              </div>
-            </div>
-          </div>
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+      <div class="container">
+        <a href="#" class="navbar-brand"> Wera </a>
+        <button
+          class="navbar-toggler"
+          type="button"
+          data-bs-toggle="collapse"
+          data-bs-target="#navbarSupportedContent"
+          aria-controls="navbarSupportedContent"
+          aria-expanded="false"
+          aria-label="Toggle navigation"
+        >
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+          <ul class="navbar-nav me-auto">
+            <li class="nav-item">
+              <a
+                href="{% url 'home' %}"
+                class="nav-link active"
+                aria-current="page"
+                style="text-decoration: none"
+                >Home</a
+              >
+            </li>
+            <li class="nav-item">
+              <a
+                href="{% url 'form_mtaani' %}"
+                class="nav-link"
+                style="text-decoration: none"
+              >
+                Form Mtaani</a
+              >
+            </li>
+            <li class="nav-item">
+              <a
+                href="{% url 'contacts' %}"
+                class="nav-link"
+                style="text-decoration: none"
+                >Contacts</a
+              >
+            </li>
+            <li class="nav-item">
+              <a
+                href="{% url 'wera_create' %}"
+                class="nav-link"
+                style="text-decoration: none"
+                >Post</a
+              >
+            </li>
+
+            <li class="nav-item">
+              {% if user.is_authenticated %}
+              <a
+                href="{% url 'contact_me' %}"
+                class="nav-link"
+                style="text-decoration: none"
+                >{{user.username}}</a
+              >
+              {% else %}
+              <a
+                href="{% url 'account_login' %} "
+                class="btn btn-primary btn-outline-white"
+                >Login</a
+              >
+              {% endif %}
+            </li>
+            {% if user.is_authenticated %}
+            <li class="nav-item">
+              <a
+                href="{% url 'account_logout' %}"
+                class="btn btn-danger btn-outline-white nav-link"
+                >Logout</a
+              >
+            </li>
+            {% endif %}
+          </ul>
         </div>
       </div>
-    </header>
-    <!-- header-end -->
-    {% block content %} {% endblock %}
-    <!-- footer start -->
-    <footer class="footer text-black">
+    </nav>
+    <div class="container p-2">{% block content %} {% endblock %}</div>
+    <footer class="footer bg-dark text-white">
       <div class="footer_top">
         <div class="container">
           <div class="row">
             <div class="col-xl-3 col-md-6 col-lg-3">
               <div class="footer_widget">
-                <h3>talk to us</h3>
+                <h3>Talk To Us</h3>
                 <p>
                   support@wera.com <br />
                   +254 759 701 314 <br />
@@ -169,7 +157,7 @@
             </div>
             <div class="col-xl-2 col-md-6 col-lg-2">
               <div class="footer_widget">
-                <h3>company</h3>
+                <h3>Company</h3>
                 <ul>
                   <li><a href="#">about </a></li>
                   <li><a href="#"> pricing</a></li>
@@ -180,7 +168,7 @@
             </div>
             <div class="col-xl-3 col-md-6 col-lg-3">
               <div class="footer_widget">
-                <h3>category</h3>
+                <h3>Category</h3>
                 <ul>
                   {% for c in categories %}
                   <li><a href="#">{{ c.name }}</a></li>
@@ -190,7 +178,7 @@
             </div>
             <div class="col-xl-4 col-md-6 col-lg-4">
               <div class="">
-                <h3>subscribe</h3>
+                <h3>Subscribe</h3>
                 <form
                   action="{% url 'newsletter_create' %}"
                   class="form-inline"
@@ -202,11 +190,11 @@
                       class="form-control mb-2"
                     />
                     <button type="submit" class="btn btn-primary">
-                      subscribe
+                      Subscribe
                     </button>
                   </div>
                 </form>
-                <p class="">weras offers delivered in your mailbox daily.</p>
+                <p class="">Get weras delivered in your mailbox daily.</p>
               </div>
             </div>
           </div>
@@ -218,7 +206,7 @@
           <div class="row">
             <div class="col-xl-12">
               <p class="copy_right text-center">
-                copyright &copy; limitgroup
+                Copyright &copy; Limit Group
                 <script>
                   document.write(new Date().getFullYear());
                 </script>
@@ -231,7 +219,7 @@
     <!--/ footer end  -->
     <!-- JS here -->
     <script
-      src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js"
+      src="https://cdn.jsdelivr.net/npm/@popperjs/config@2.11.6/dist/umd/popper.min.js"
       integrity="sha384-oBqDVmMz9ATKxIep9tiCxS/Z9fNfEXiDAYTujMAeBAsjFuCZSmKbSSUnQlmh/jp3"
       crossorigin="anonymous"
     ></script>
