--- a/wera/templates/wera/base.html
+++ b/wera/templates/wera/base.html
@@ -219,7 +219,7 @@
     <!--/ footer end  -->
     <!-- JS here -->
     <script
-      src="https://cdn.jsdelivr.net/npm/@popperjs/config@2.11.6/dist/umd/popper.min.js"
+      src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js"
       integrity="sha384-oBqDVmMz9ATKxIep9tiCxS/Z9fNfEXiDAYTujMAeBAsjFuCZSmKbSSUnQlmh/jp3"
       crossorigin="anonymous"
     ></script>
