--- a/form_mtaani/templates/form_mtaani/create.html
+++ b/form_mtaani/templates/form_mtaani/create.html
@@ -1,59 +1,74 @@
 {% extends 'wera/base.html' %} {% block content %}
+<div class="container min-vh-100 d-flex ">
+  <div class="row w-100">
+    <!-- Form Column -->
+    <div class="col-md-6 p-4">
+      <h2 class="text-center mb-4">Tell others about a form in your mtaa</h2>
+      <form method="post" novalidate="novalidate">
+        {% csrf_token %}
+        <div class="row g-2">
+          <div class="col-12 mb-2">
+            <div class="form-group">
+              <label for="title">Title</label>
+              <input class="form-control" name="title" id="title" type="text" />
+            </div>
+          </div>
+          <div class="col-12 mb-2">
+            <div class="form-group">
+              <label for="description">Description</label>
+              <textarea
+                class="form-control"
+                name="description"
+                id="description"
+                cols="30"
+                rows="5"
+              ></textarea>
+            </div>
+            <div id="help" class="form-text">
+              Make it short, we accept up to 30 characters
+            </div>
+          </div>
+          <div class="col-sm-6">
+            <div class="form-group">
+              <label for="location">Location</label>
+              <input class="form-control" name="location" id="location" type="text" />
+            </div>
+          </div>
+          <div class="col-sm-6">
+            <div class="form-group">
+              <label for="category">Category</label>
+              <select name="category" id="category" class="form-select">
+                <option value="" selected>Select Category</option>
+                {% for c in categories %}
+                <option value="{{ c.id }}">{{ c.name }}</option>
+                {% endfor %}
+              </select>
+            </div>
+          </div>
+        </div>
+        <div class="form-group mt-3">
+          <button type="submit" class="btn btn-primary w-100">Post Wera</button>
+        </div>
+      </form>
+    </div>
 
-<div class="justify-content-center items-center">
-  <h2 class="text-center">Tell others about a form in your mtaa</h2>
-  <form class="" action="" method="post" id="" novalidate="novalidate">
-    {% csrf_token %}
-    <div class="row g-2">
-      <div class="col-12 mb-2">
-        <div class="form-group">
-          <label for="">Title</label>
-          <input class="form-control" name="title" id="title" type="text" />
-        </div>
-      </div>
-      <div class="col-12 mb-2">
-        <div class="form-group">
-          <label for="">Description</label>
-          <textarea
-            class="form-control w-100"
-            name="benefits"
-            id="benefits"
-            cols="30"
-            rows="5"
-          ></textarea>
-        </div>
-        <div id="help" class="form-text">
-          Make it short, we accept upto 30 characters
-        </div>
-      </div>
-      <div class="mb-2"></div>
-      <div class="col-sm-6">
-        <div class="form-group">
-          <label for="">Location</label>
-          <input
-            class="form-control"
-            name="location"
-            id="location"
-            type="text"
-          />
-        </div>
-      </div>
-      <div class="col-sm-6">
-        <div class="form-group">
-          <label for="category">Category</label>
-          <select name="category" id="" class="form-select">
-            <option value="" selected>Select Category</option>
-            {% for c in categories %}
-            <option value="{{ c.id }}">{{ c.name }}</option>
-            {% endfor %}
-          </select>
-        </div>
-      </div>
+    <!-- Posted Data Column -->
+    <div class="col-md-6 p-4 rounded">
+      <h2 class="text-center mb-4">Form Mtaani</h2>
+      {% if form_mtaani %}
+      <ul class="list-group">
+        {% for post in form_mtaani %}
+        <li class="list-group-item">
+          <h5>{{ post.title }}</h5>
+          <p>{{ post.description }}</p>
+          <small class="text-muted">Location: {{ post.location }}</small>
+        </li>
+        {% endfor %}
+      </ul>
+      {% else %}
+      <p class="text-center">No form posted yet. Be the first to post!</p>
+      {% endif %}
     </div>
-    <div class="form-group mt-3">
-      <button type="submit" class="btn btn-primary w-100">Post Wera</button>
-    </div>
-  </form>
+  </div>
 </div>
-
 {% endblock %}
