--- a/wera/templates/wera/base.html
+++ b/wera/templates/wera/base.html
@@ -10,7 +10,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
-      href="https://fonts.googleapis.com/css2?family=Work+Sans:ital,wght@0,100..900;1,100..900&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Ubuntu+Sans:ital,wght@0,100..800;1,100..800&display=swap"
       rel="stylesheet"
     />
     <link
@@ -25,12 +25,6 @@
     />
 
     <!-- <link rel="manifest" href="site.webmanifest"> -->
-
-    <!-- CSS here -->
-    <link rel="stylesheet" href="{% static 'css/magnific-popup.css' %}" />
-    <link rel="stylesheet" href="{% static 'css/nice-select.css' %} " />
-    <link rel="stylesheet" href="{% static 'css/gijgo.css' %}" />
-    <link rel="stylesheet" href="{% static 'css/slicknav.css' %}" />
     <link rel="stylesheet" href="{% static 'css/style.css' %}" />
   </head>
 
@@ -51,7 +45,7 @@
           <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
-          <ul class="navbar-nav me-auto">
+          <ul class="navbar-nav ms-auto">
             <li class="nav-item">
               <a
                 href="{% url 'home' %}"
@@ -87,11 +81,11 @@
               >
             </li>
 
-            <li class="nav-item">
+            <li class="nav-item mx-3">
               {% if user.is_authenticated %}
               <a
                 href="{% url 'contact_me' %}"
-                class="nav-link"
+                class="nav-link btn btn-outline-light"
                 style="text-decoration: none"
                 >{{user.username}}</a
               >
@@ -159,9 +153,9 @@
               <div class="footer_widget">
                 <h3>Company</h3>
                 <ul>
-                  <li><a href="#">about </a></li>
-                  <li><a href="#"> pricing</a></li>
-                  <li><a href="#">career tips</a></li>
+                  <li><a href="#">About </a></li>
+                  <li><a href="#"> Pricing</a></li>
+                  <li><a href="#">Career Tips</a></li>
                   <li><a href="#">FAQ</a></li>
                 </ul>
               </div>
@@ -216,8 +210,6 @@
         </div>
       </div>
     </footer>
-    <!--/ footer end  -->
-    <!-- JS here -->
     <script
       src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js"
       integrity="sha384-oBqDVmMz9ATKxIep9tiCxS/Z9fNfEXiDAYTujMAeBAsjFuCZSmKbSSUnQlmh/jp3"
@@ -228,12 +220,5 @@
       integrity="sha384-cuYeSxntonz0PPNlHhBs68uyIAVpIIOZZ5JqeqvYYIcEL727kskC66kF92t6Xl2V"
       crossorigin="anonymous"
     ></script>
-    <script src="{% static 'js/isotope.pkgd.min.js' %}"></script>
-    <script src="{% static 'js/waypoints.min.js' %}"></script>
-    <script src="{% static 'js/nice-select.min.js' %}"></script>
-    <script src="{% static 'js/jquery.slicknav.min.js' %}"></script>
-    <script src="{% static 'js/jquery.magnific-popup.min.js' %}"></script>
-    <script src="{% static 'js/gijgo.min.js' %}"></script>
-    <script src="{% static 'js/main.js' %}"></script>
   </body>
 </html>
