--- a/wera/templates/wera/index.html
+++ b/wera/templates/wera/index.html
@@ -1,123 +1,115 @@
-{% extends 'wera/base.html' %}{% load static %} {% block content %}
+{% extends 'wera/base.html' %} {% load static %} {% block content %}
 
-<!-- catagory_area -->
-<div class="catagory_area">
-    <div class="row cat_search">
-      <div class="col-lg-3 col-md-4">
+<!-- Category Area -->
+<div class="category_area py-5">
+  <div class="container">
+    <div class="row cat_search mb-4">
+      <div class="col-lg-3 col-md-4 mb-3">
         <div class="single_input">
-          <input type="text" placeholder="Search Keyword" />
+          <input
+            type="text"
+            class="form-control"
+            placeholder="Search Keyword"
+          />
         </div>
       </div>
-      <div class="col-lg-3 col-md-4">
+      <div class="col-lg-3 col-md-4 mb-3">
         <div class="single_input">
-          <select class="wide form-select">
-            <option data-display="location">Location</option>
+          <select class="form-select">
+            <option data-display="Location">Location</option>
             <option value="1">Nairobi</option>
             <option value="2">Kisumu</option>
-            <option value="4">Nakuru</option>
+            <option value="3">Nakuru</option>
             <option value="4">Mombasa</option>
           </select>
         </div>
       </div>
-      <div class="col-lg-3 col-md-4">
+      <div class="col-lg-3 col-md-4 mb-3">
         <div class="single_input">
-          <select class="wide form-select">
-            <option data-display="category">Category</option>
+          <select class="form-select">
+            <option data-display="Category">Category</option>
             {% for c in categories %}
             <option value="{{ c.id }}">{{ c.name }}</option>
             {% endfor %}
           </select>
         </div>
       </div>
-      <div class="col-lg-3 col-md-12">
+      <div class="col-lg-3 col-md-12 mb-3">
         <div class="Wera_btn">
-          <a href="#" class="btn btn-primary">Search</a>
+          <a href="#" class="btn btn-primary w-100">
+            <i class="bi bi-search-heart"></i> Search</a
+          >
         </div>
       </div>
     </div>
     <div class="row">
       <div class="col-lg-12">
         <div class="popular_search d-flex align-items-center">
-          <span>Popular Search:</span>
-          <ul>
+          <span class="fw-bold me-2">Popular Search:</span>
+          <ul class="list-unstyled d-flex flex-wrap">
             <li>
-              <a href="#" style="text-decoration: none">design & creative</a>
+              <a href="#" class="text-decoration-none me-3"
+                >design & creative</a
+              >
             </li>
-            <li><a href="#" style="text-decoration: none">marketing</a></li>
+            <li><a href="#" class="text-decoration-none me-3">marketing</a></li>
             <li>
-              <a href="#" style="text-decoration: none">administration</a>
+              <a href="#" class="text-decoration-none me-3">administration</a>
             </li>
             <li>
-              <a href="#" style="text-decoration: none">teaching & education</a>
+              <a href="#" class="text-decoration-none me-3"
+                >teaching & education</a
+              >
             </li>
-            <li><a href="#" style="text-decoration: none">engineering</a></li>
             <li>
-              <a href="#" style="text-decoration: none">software & web</a>
+              <a href="#" class="text-decoration-none me-3">engineering</a>
             </li>
-            <li><a href="#" style="text-decoration: none">telemarketing</a></li>
+            <li>
+              <a href="#" class="text-decoration-none me-3">software & web</a>
+            </li>
+            <li><a href="#" class="text-decoration-none">telemarketing</a></li>
           </ul>
         </div>
       </div>
     </div>
   </div>
 </div>
-<!--/ catagory_area -->
 
-<!-- popular_catagory_area_start  -->
-{% comment %}
-<div class="popular_catagory_area">
-  <div class="container">
-    <div class="row">
-      <div class="col-lg-12">
-        <div class="section_title mb-40">
-          <h3>Popular Categories</h3>
-        </div>
-      </div>
-    </div>
-    <div class="row">
-      {% for j in categories %}
-      <div class="col-lg-4 col-xl-3 col-md-6">
-        <div class="single_catagory">
-          <a href="{% url 'category_detail' %}">
-            <h4>{{ c.name }}</h4>
-          </a>
-          <p><span></span> Available positions</p>
-        </div>
-      </div>
-      {% endfor %}
-    </div>
-  </div>
-</div>
-{% endcomment %}
-
-<div class="job_listing_area p-5">
+<!-- Job Listing Area -->
+<div class="job_listing_area py-5">
   <div class="container">
     <div class="job_lists">
       <div class="row">
         {% for j in weras %}
-        <div class="col-lg-12 col-md-12">
-          <div class="single_jobs white-bg d-flex justify-content-between">
+        <div class="col-lg-12 mb-4">
+          <div
+            class="single_jobs white-bg d-flex justify-content-between align-items-center shadow-sm p-4 rounded"
+          >
             <div class="jobs_left d-flex align-items-center">
-              <div class="jobs_conetent">
+              <div class="jobs_content">
                 <a href="{% url 'wera_detail' j.pk %}">
-                  <h4>{{ j.title }}</h4>
+                  <h4 class="text-primary">{{ j.title }}</h4>
                 </a>
-                <div class="links_locat d-flex align-items-center">
-                  <div class="location">
-                    <p><i class="bi bi-map-marker"></i>{{ j.location }}</p>
+                <div class="links_locat d-flex align-items-center mt-2">
+                  <div class="location me-4">
+                    <p class="m-0">
+                      <i class="bi bi-geo-alt"></i> {{ j.location }}
+                    </p>
                   </div>
-                  <div class="location">
-                    <p><i class="bi bi-clock-o"></i>{{ j.Wera_type }}</p>
+                  <div class="category">
+                    <p class="m-0">
+                      <i class="bi bi-tags"></i> {{ j.category.name }}
+                    </p>
                   </div>
                 </div>
               </div>
             </div>
-            <div class="jobs_right">
-              <div class="apply_now">
+            <div class="jobs_right d-flex align-items-center">
+              <div class="apply_now me-3">
                 <a class="heart_mark" href="#"> <i class="bi bi-heart"></i> </a>
               </div>
               <div class="date">
-                <p>{{ j.created_at }}</p>
+                <p class="text-muted">{{ j.created_at }}</p>
               </div>
             </div>
           </div>
@@ -127,10 +119,8 @@
     </div>
   </div>
 </div>
-<!-- Wera_listing_area_end  -->
 
-{% comment %}
-<div class="top_companies_area">
+<div class="top_companies_area py-5">
   <div class="container">
     <div class="row align-items-center mb-40">
       <div class="col-lg-6 col-md-6">
@@ -138,57 +128,35 @@
           <h3>Top Companies</h3>
         </div>
       </div>
-      <div class="col-lg-6 col-md-6">
-        <div class="brouse_Wera text-right">
-          <a href="" class="boxed-btn4">Browse More</a>
+      <div class="col-lg-6 col-md-6 text-end">
+        <div class="browse_job">
+          <a href="#" class="btn btn-outline-primary">Browse More</a>
         </div>
       </div>
     </div>
     <div class="row">
-      <div class="col-lg-4 col-xl-3 col-md-6">
-        <div class="single_company">
+      {% for company in companies %}
+      <div class="col-lg-4 col-md-6 mb-4">
+        <div class="single_company text-center p-4 border rounded shadow-sm">
           <div class="thumb">
-            <img src="img/svg_icon/5.svg" alt="" />
+            <img
+              src="{{ company.logo_url }}"
+              alt="{{ company.name }}"
+              class="img-fluid"
+            />
           </div>
-          <a href="Weras.html">
-            <h3>Snack Studio</h3>
+          <a
+            href="{% url 'company_detail' company.id %}"
+            class="text-decoration-none"
+          >
+            <h3>{{ company.name }}</h3>
           </a>
-          <p><span>50</span> Available position</p>
+          <p><span>{{ company.position_count }}</span> Available positions</p>
         </div>
       </div>
-      <div class="col-lg-4 col-xl-3 col-md-6">
-        <div class="single_company">
-          <div class="thumb">
-            <img src="img/svg_icon/4.svg" alt="" />
-          </div>
-          <a href="Weras.html">
-            <h3>Snack Studio</h3>
-          </a>
-          <p><span>50</span> Available position</p>
-        </div>
-      </div>
-      <div class="col-lg-4 col-xl-3 col-md-6">
-        <div class="single_company">
-          <div class="thumb">
-            <img src="img/svg_icon/3.svg" alt="" />
-          </div>
-          <a href="Weras.html">
-            <h3>Snack Studio</h3>
-          </a>
-          <p><span>50</span> Available position</p>
-        </div>
-      </div>
-      <div class="col-lg-4 col-xl-3 col-md-6">
-        <div class="single_company">
-          <div class="thumb">
-            <img src="img/svg_icon/1.svg" alt="" />
-          </div>
-          <a href="Weras.html">
-            <h3>Snack Studio</h3>
-          </a>
-          <p><span>50</span> Available position</p>
-        </div>
-      </div>
+      {% endfor %}
     </div>
+  </div>
 </div>
-{% endcomment %} {% endblock %}
+
+{% endblock %}
