--- a/contact/templates/contact/index.html
+++ b/contact/templates/contact/index.html
@@ -2,7 +2,7 @@
 {% load static %} 
 {% block content %}
 
-<div class="container min-vh-100 pt-3">
+<div class="container  pt-3">
   <h1 class="text-center mb-4">Find a Potential Profile for Your Task/Job</h1>
   
   <div class="row g-4">
